fix: 버전 정보 반환 실패 시 크래시 대응, 약관 및 개인정보 처리방침 URL 노션 대응

--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -48,7 +48,7 @@
 
     <fragment
         android:id="@+id/webViewFragmentFromSetting"
-        android:name="org.sopt.santamanitto.user.signin.fragment.WebViewFragment"
+        android:name="org.sopt.santamanitto.user.signin.fragment.WebLinkFragment"
         android:label="WebViewFragment"
         tools:layout="@layout/fragment_webview">
         <argument android:name="url" />
