--- a/app/src/main/res/layout/fragment_manitto_room_finish.xml
+++ b/app/src/main/res/layout/fragment_manitto_room_finish.xml
@@ -8,7 +8,7 @@
         <import type="android.view.View" />
 
         <variable
-            name="viewModel"
+            name="vm"
             type="org.sopt.santamanitto.room.manittoroom.ManittoRoomViewModel" />
     </data>
 
@@ -21,7 +21,7 @@
         <org.sopt.santamanitto.view.SantaBackground
             android:id="@+id/santabackground_finish"
             style="@style/SantaBackground.ResultTask"
-            setFinishDescription="@{viewModel.period}"
+            setFinishDescription="@{vm.period}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:santaTitle="@{viewModel.roomName}"
+            app:santaTitle="@{vm.roomName}"
             tool:santaDescription="7일동안의 산타 마니또 종료!\n나의 산타 마니또는 누구일까?"
             tool:santaTitle="마니또 방 이름" />
 
@@ -115,8 +115,8 @@
             <org.sopt.santamanitto.view.SantaLoading
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
-                app:error="@{viewModel.networkErrorOccur}"
+                android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
+                app:error="@{vm.networkErrorOccur}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
