[FIX/#117] ManittoRoom 피그마 얼라인

--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -60,10 +60,11 @@
             android:id="@+id/santaloading_itemresult"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            tool:visibility="gone" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
