--- a/app/src/main/res/layout/layout_finish.xml
+++ b/app/src/main/res/layout/layout_finish.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_matched_cardview_vertical"
             android:text="@string/finish_title"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,6 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_matched_mission_title_bottom"
             android:text="@string/matched_mission_title"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/textview_finish_mission"
             app:layout_constraintStart_toStartOf="parent" />
 
