--- a/app/src/main/res/layout/fragment_manitto_room_finish.xml
+++ b/app/src/main/res/layout/fragment_manitto_room_finish.xml
@@ -120,7 +120,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tool:visibility="gone" />
 
         </org.sopt.santamanitto.view.SantaCardView>
 
