[QA] 온보딩 및 닉네임 수정에 middleTitle 적용

--- a/app/src/main/res/layout/fragment_edit_name.xml
+++ b/app/src/main/res/layout/fragment_edit_name.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:backKey="true"
-            app:bigTitle="@string/editname_background"
+            app:middleTitle="@string/editname_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.396"
             app:layout_constraintStart_toStartOf="parent"
