--- a/app/src/main/res/layout/fragment_enter_name.xml
+++ b/app/src/main/res/layout/fragment_enter_name.xml
@@ -20,7 +20,7 @@
             style="@style/SantaBackground.BigTitle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:bigTitle="@string/entername_background_welcome"
+            app:middleTitle="@string/entername_background_welcome"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.396"
             app:layout_constraintStart_toStartOf="parent"
