--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,6 +25,8 @@
 
     <style name="Theme.Santa.Splash" parent="Theme.SplashScreen">
         <item name="android:windowIsTranslucent">true</item>
+        <item name="windowSplashScreenAnimatedIcon">@android:color/transparent</item>
+        <item name="windowSplashScreenBackground">@android:color/transparent</item>
         <item name="postSplashScreenTheme">@style/AppTheme.Base</item>
     </style>
 
