--- a/app/src/main/res/layout/fragment_enter_name.xml
+++ b/app/src/main/res/layout/fragment_enter_name.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
-        <variable
-            name="viewModel"
-            type="org.sopt.santamanitto.user.signin.viewmodel.EnterNameViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,11 +16,11 @@
             style="@style/SantaBackground.BigTitle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:middleTitle="@string/entername_background_welcome"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.396"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:middleTitle="@string/entername_background_welcome" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textview_entername_title"
@@ -65,7 +61,7 @@
             app:number="2" />
 
         <org.sopt.santamanitto.view.SantaNameInput
-            setText="@={viewModel.userName}"
+            android:id="@+id/santanameinput_entername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_entire"
@@ -83,12 +79,10 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_signin_button_bottom"
-            android:enabled="@{viewModel.isUserNameValid()}"
             android:text="@string/entername_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
