--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -82,7 +82,7 @@
             android:layout_marginStart="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_main_recyclerview_top"
             android:text="@string/main_my_manitto_history"
-            android:textColor="@color/gray_3"
+            android:textColor="@color/dark_gray"
             android:textFontWeight="700"
             android:textSize="@dimen/size_main_mymanitto"
             app:layout_constraintBottom_toTopOf="@id/constraintlayout_main_nomymanitto"
@@ -149,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/main_no_manitto_notice"
-                android:textColor="@color/gray_3"
+                android:textColor="@color/dark_gray"
                 android:textSize="@dimen/size_main_no_manitto_notice"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
