--- a/app/src/main/res/layout/item_mymanitto_removed.xml
+++ b/app/src/main/res/layout/item_mymanitto_removed.xml
@@ -48,7 +48,7 @@
                 android:background="@drawable/round_ractangle_background_30"
                 android:backgroundTint="@color/gray_1"
                 android:text="@string/mymanitto_remove"
-                android:textColor="@color/gray_3"
+                android:textColor="@color/dark_gray"
                 android:textSize="12dp"
                 android:textFontWeight="700"
                 app:layout_constraintBottom_toBottomOf="parent"
