--- a/app/src/main/res/layout/santa_image_round_button.xml
+++ b/app/src/main/res/layout/santa_image_round_button.xml
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/size_satnaimageroundbutton_title"
                     android:textStyle="bold"
-                    android:textColor="@color/gray_3"
+                    android:textColor="@color/dark_gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textSize="@dimen/size_santaimageroundbutton_description"
-                    android:textColor="@color/gray_3"
+                    android:textColor="@color/dark_gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
