--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -116,7 +116,7 @@
                         android:id="@+id/textview_createroom_expirationdescription"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/gray_3"
+                        android:textColor="@color/dark_gray"
                         android:textSize="@dimen/size_createroom_expiration_description"
                         tool:text="@string/createroom_expiration_description" />
 
