--- a/app/src/main/res/values-v28/themes.xml
+++ b/app/src/main/res/values-v28/themes.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="TitleOfCardView" parent="Widget.AppCompat.TextView">
-        <item name="android:textColor">@color/gray_3</item>
+        <item name="android:textColor">@color/dark_gray</item>
         <item name="android:textFontWeight">700</item>
         <item name="android:textSize">@dimen/size_createroom_cardview_titles</item>
     </style>
