--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-
+    <!-- 하단 gray 추후 삭제 -->
     <color name="gray_1">#EFEFEF</color>
     <color name="gray_2">#C4C4C4</color>
-    <color name="gray_3">#666666</color>
-    <color name="gray_4">#F7F7F7</color>
+
+    <color name="dark_gray">#666666</color>
+    <color name="light_gray">#DADADA</color>
+    <color name="light_bg">#F4F4F4</color>
 
     <color name="shadow_gray">#E3E3E3</color>
     <color name="red">#f31523</color>
     <color name="navy">#00154B</color>
-    <color name="green">#2F5846</color>
 </resources>
